easy fix for flicker on reload

--- a/base.css
+++ b/base.css
@@ -26,6 +26,7 @@
 }
 
 #gallery p {
+	display: none;
 	pointer-events: none;
 	text-align:bottom;
 	position: absolute;
